--- a/src/Themes/Basic/Converters.xaml
+++ b/src/Themes/Basic/Converters.xaml
@@ -18,10 +18,11 @@
     <converter:MultiCommandParametersConverter x:Key="MultiCommandParametersConverter"/>
     <converter:MultiplicationConverter x:Key="MultiplicationConverter"/>
     <converter:NullableToBooleanConverter x:Key="NullableToBooleanConverter"/>
+    <converter:NullableToVisibilityConverter x:Key="NullableToVisibilityConverter"/>
     <converter:ProgressBarCornerRadiusConverter x:Key="ProgressBarCornerRadiusConverter"/>
     <converter:ReverseConverter x:Key="ReverseConverter"/>
     <converter:RoundedRectangleConverter x:Key="RoundedRectangleConverter"/>
     <converter:StringFormatConverter x:Key="StringFormatConverter"/>
     <converter:ThicknessMultiplicationConverter x:Key="ThicknessMultiplicationConverter"/>
-    
+   
 </ResourceDictionary>
