--- a/src/Themes/Styles/Assets/Menu.xaml
+++ b/src/Themes/Styles/Assets/Menu.xaml
@@ -1,5 +1,6 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                    xmlns:attach="clr-namespace:WYW.UI.Controls.Attach">
     <Style TargetType="Menu">
         <Setter Property="FocusVisualStyle" Value="{x:Null}"/>
         <Setter Property="Foreground" Value="{StaticResource Foreground}"/>
@@ -24,6 +25,71 @@
                         <Trigger Property="IsEnabled" Value="False">
                             <Setter Property="Opacity" Value="0.6"/>
                         </Trigger>
+                    </ControlTemplate.Triggers>
+                </ControlTemplate>
+
+            </Setter.Value>
+        </Setter>
+    </Style>
+
+    <!--该风格没有实现预期效果，文字大小不会跟随Windows，从而影响图标大小-->
+    <Style x:Key="MenuButtonStyle" TargetType="Menu">
+        <Setter Property="FocusVisualStyle" Value="{x:Null}"/>
+        <Setter Property="Foreground" Value="{StaticResource Foreground}"/>
+        <Setter Property="Background" Value="Transparent"/>
+        <Setter Property="BorderBrush" Value="{StaticResource BorderBrush}"/>
+        <Setter Property="BorderThickness" Value="1"/>
+        <Setter Property="HorizontalContentAlignment" Value="Center"/>
+        <Setter Property="VerticalContentAlignment" Value="Center"/>
+        <Setter Property="attach:MenuElement.CornerRadius" Value="{StaticResource Control.CornerRadius}"/>
+        <Setter Property="attach:MenuElement.IcoHeight" Value="{Binding FontSize,RelativeSource={RelativeSource Mode=Self},Converter={StaticResource MultiplicationConverter},ConverterParameter=1.5}"/>
+        <Setter Property="attach:MenuElement.IcoWidth" Value="{Binding FontSize,RelativeSource={RelativeSource Mode=Self},Converter={StaticResource MultiplicationConverter},ConverterParameter=1.5}"/>
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="Menu">
+                    <Border BorderBrush="{TemplateBinding BorderBrush}"
+                            BorderThickness="{TemplateBinding BorderThickness}" 
+                            Background="{TemplateBinding Background}" 
+                            Padding="{TemplateBinding Padding}"
+                            CornerRadius="{Binding Path=(attach:MenuElement.CornerRadius),RelativeSource={RelativeSource TemplatedParent}}"
+                            SnapsToDevicePixels="true">
+                        <Grid HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}" x:Name="GridContent">
+                            <StackPanel Orientation="Horizontal" Name="StackPanel">
+                                <Grid  x:Name="GridIco" 
+                                       Height="{Binding Path=(attach:MenuElement.IcoHeight),RelativeSource={RelativeSource TemplatedParent}}"
+                                       Width="{Binding Path=(attach:MenuElement.IcoWidth),RelativeSource={RelativeSource TemplatedParent}}">
+                                    <Path Fill="{TemplateBinding Foreground}"  
+                                          Data="{Binding Path=(attach:MenuElement.IcoGeometry),RelativeSource={RelativeSource TemplatedParent}}" 
+                                          Stretch="Uniform"
+                                          VerticalAlignment="Center"
+                                          HorizontalAlignment="Center"/>
+                                </Grid>
+                                <Grid x:Name="GridSpace"
+                                      Width="{Binding Path=(attach:MenuElement.IcoSpace),RelativeSource={RelativeSource TemplatedParent}}"
+                                      Height="{Binding Path=(attach:MenuElement.IcoSpace),RelativeSource={RelativeSource TemplatedParent}}"/>
+                                <Grid IsItemsHost="True" Name="ItemsPresenter" SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}"
+                                      KeyboardNavigation.DirectionalNavigation="Contained" 
+                                      TextElement.Foreground="{TemplateBinding Foreground}"
+                                      VerticalAlignment="{TemplateBinding VerticalContentAlignment}"
+                                      HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"/>
+
+                            </StackPanel>
+                        </Grid>
+
+                     
+                    </Border>
+                    <ControlTemplate.Triggers>
+                        <Trigger Property="IsEnabled" Value="false">
+                            <Setter Property="Foreground" Value="{StaticResource ForegroundDisabled}"/>
+                            <Setter Property="Background" Value="{StaticResource Control.BackgroundDisabled}"/>
+                            <Setter Property="BorderThickness" Value="0"/>
+                        </Trigger>
+                        <Trigger Property="IsMouseOver" Value="True">
+                            <Setter Property="Background" Value="{StaticResource Control.BackgroundHover }"/>
+                            <Setter Property="BorderBrush" Value="{StaticResource BorderBrushHover}"/>
+                            <Setter Property="Foreground" Value="{StaticResource ForegroundHover}"/>
+                        </Trigger>
+
                     </ControlTemplate.Triggers>
                 </ControlTemplate>
 
