--- a/src/Themes/Styles/Assets/TreeView.xaml
+++ b/src/Themes/Styles/Assets/TreeView.xaml
@@ -4,6 +4,7 @@
         <Setter Property="Focusable" Value="False"/>
         <Setter Property="BorderBrush" Value="{StaticResource BorderBrush}"/>
         <Setter Property="BorderThickness" Value="0"/>
+        <Setter Property="Foreground" Value="{StaticResource Foreground}"/>
         <Setter Property="Padding" Value="0"/>
         <Setter Property="ScrollViewer.HorizontalScrollBarVisibility" Value="Auto"/>
         <Setter Property="ScrollViewer.VerticalScrollBarVisibility" Value="Auto"/>
