--- a/src/Themes/Styles/NumericUpDown.xaml
+++ b/src/Themes/Styles/NumericUpDown.xaml
@@ -161,6 +161,7 @@
         <Setter Property="LedForeground" Value="{StaticResource Foreground}"/>
         <Setter Property="BorderThickness" Value="1"/>
         <Setter Property="Focusable" Value="True"/>
+        <Setter Property="HorizontalContentAlignment" Value="Center"/>
         <Setter Property="Margin" Value="{DynamicResource Control.VerticalMargin}"/>
         <Setter Property="Template" Value="{StaticResource NumericUpDownHorizontalTemplate}"/>
         <Style.Triggers>
