--- a/test/Views/DatePicker.xaml
+++ b/test/Views/DatePicker.xaml
@@ -14,7 +14,7 @@
         </Grid.ColumnDefinitions>
         <GroupBox Grid.Column="0" Header="常规用法">
             <UniformGrid   Rows="10">
-                <DatePicker  />
+                <DatePicker SelectedDateFormat="Short" />
             </UniformGrid>
         </GroupBox>
         <GroupBox Grid.Column="2" Header="高级用法">
